# cetmodules

./: .cmake-format.json  .gitignore  .perltidyrc  CMakeLists.txt  CMakePresets.json  INSTALL  LICENSE  README  VERSION  cetmods-config.cmake.in  cetmodules-config.cmake.in  genindex.html  index.html  latest  objects.inv  reference-heading.html  search.html  searchindex.js  version_switch.js  versions.json
Modules/: BasicPlugin.cmake  Bootstrap.cmake.in  BootstrapCetbuildtools.cmake.in  BootstrapCetmodules.cmake.in  BuildDictionary.cmake  CMakeLists.txt  CMakeLists.txt.save  CetCMPCleaner.cmake  CetCMakeConfig.cmake  CetCMakeEnv.cmake  CetCMakeUtils.cmake  CetCmdWrapper.cmake  CetCopy.cmake  CetCurrentSubdir.cmake  CetExclude.cmake  CetFindPackage.cmake  CetFindPkgConfigPackage.cmake  CetGenerateSphinxDocs.cmake  CetGetCxxStandardFlag.cmake  CetGetProductInfo.cmake  CetInstall.cmake  CetInstalledPath.cmake  CetMake.cmake  CetMakeCompletions.cmake  CetMakeLibrary.cmake  CetPackagePath.cmake  CetParseArgs.cmake  CetProcessLiblist.cmake  CetProjectVars.cmake  CetProvideDependency.cmake  CetRegexEscape.cmake  CetRegisterExportName.cmake  CetRegisterExportSet.cmake  CetRootCint.cmake  CetSetVersionFromFile.cmake  CetTest.cmake  CetToolchainOverrides.cmake  CetTransitivePaths.cmake  CheckClassVersion.cmake  CheckProdVersion.cmake  (+48 more)
Modules/compat/: CetFindPackage.cmake  CetHaveQual.cmake  CetMakeCommand.cmake  CetParseArgs.cmake  CheckProdVersion.cmake  CheckUpsVersion.cmake  Compatibility.cmake  FindRange-v3.cmake  FindSQLite3.cmake  FindTBB.cmake  FindUpsBoost.cmake  FindUpsGeant4.cmake  FindUpsPackage.cmake  FindUpsRoot.cmake  Findart.cmake  Findcanvas_root_io.cmake  Findcatch.cmake  Findcetbuildtools.cmake  Findcppunit.cmake  Findrange-v3.cmake  Findsmc_compiler.cmake  Findsqlite.cmake  Findtbb.cmake  InstallLicense.cmake  ParseUpsVersion.cmake  ProcessUpsFiles.cmake  Ups.cmake  UseCPack.cmake
Modules/compat/art/: ArtDictionary.cmake  ArtMake.cmake  BuildPlugins.cmake  CetCMPCleaner.cmake  art::module.cmake  art::plugin.cmake  art::service.cmake  art::source.cmake  art::tool.cmake  mfPlugin.cmake  mfStatsPlugin.cmake  modulePlugin.cmake  pluginPlugin.cmake  servicePlugin.cmake  sourcePlugin.cmake  toolPlugin.cmake
Modules/private/: Bootstrap.cmake.in  CetAddTransitiveDependency.cmake  CetExclude.cmake  CetFindAbsoluteTransitiveDependencies.cmake  CetFindPackage.cmake  CetHandleExtendedVersion.cmake  CetOverrideFindPackage.cmake  CetToolchainOverrides.cmake
config/: CMakeLists.txt  CMakePresets.json.in  CetConfigVersion-AnyNewerVersion.cmake.in  CetConfigVersion-ExactVersion.cmake.in  CetConfigVersion-SameMajorVersion.cmake.in  CetConfigVersion-SameMinorVersion.cmake.in  MyConfig.pm  UPS_PRODUCT_VERSION_FILE.in  cetmodules-CMP0096.cmake  cetmodules-cmake-version-check.cmake  cetmodules-config-module-path.cmake.in  cetmodules-no-in-tree-source-modules.cmake  cetmodules-override-toolchain.cmake  cetmodules-override-toolchain.cmake.in  package-config.cmake.bottom.in  package-config.cmake.init.in  package-config.cmake.preamble.in  product-config.cmake.in.bottom  product-config.cmake.in.middle
config/ups/: CMakeLists.txt  CMakePresets.json.in  perl-env.csh  perl-env.sh  product-chain-file.in  product-version-file.in  product.table.bottom.in  product.table.top.in
doc/: CMakeLists.txt  cetmodules-common.rst  common-conf.py.in  conf.py.in  index.rst  landing-bottom.rst  landing-conf.py.in  landing-index.rst.m4  landing-reference.rst  landing-top.rst  publish-reference-index.rst.m4  reference-command-line-tools.rst  reference-conf.py.in  reference-helpers-etc.rst  reference-index.rst.m4  reference-manuals.rst  version_switch.js
doc/landing/: conf.py.in  index.rst
doc/landing-templates/: layout.html
doc/manual/: buildtool.1.rst  cetmodules-commands.7.rst  cetmodules-modules.7.rst  cetmodules-project-variables.7.rst  cetmodules-variables.7.rst  code-dep-graph.1.rst  format-code.1.rst  increment-version.1.rst  intersphinx-refs.1.rst  make_bash_completions.1.rst  migrate.1.rst
doc/module/: BasicPlugin.rst  BuildDictionary.rst  CetCMakeConfig.rst  CetCMakeEnv.rst  CetCMakeUtils.rst  CetCopy.rst  CetExclude.rst  CetFindPackage.rst  CetFindPkgConfigPackage.rst  CetGenerateSphinxDocs.rst  CetInstall.rst  CetInstalledPath.rst  CetMake.rst  CetMakeCompletions.rst  CetMakeLibrary.rst  CetPackagePath.rst  CetProcessLiblist.rst  CetRegexEscape.rst  CetRegisterExportName.rst  CetRootCint.rst  CetTest.rst  CetToolchainOverrides.rst  CheckClassVersion.rst  CheckProdVersion.rst  FindCatch2.rst  FindCppUnit.rst  FindRange.rst  FindSQLite3.rst  FindSmc.rst  Findsphinx-doc.rst  GenerateFromFragments.rst  InstallFW.rst  InstallFhicl.rst  InstallGdml.rst  InstallHeaders.rst  InstallPerllib.rst  InstallPkgMeta.rst  InstallPython.rst  InstallScripts.rst  InstallSource.rst  (+9 more)
doc/module/compat/: CetHaveQual.rst  CetParseArgs.rst  CheckProdVersion.rst  Compatibility.rst  FindTBB.rst  FindUpsBoost.rst  FindUpsGeant4.rst  FindUpsPackage.rst  FindUpsRoot.rst  Findcatch.rst  Findcetbuildtools.rst  Findcppunit.rst  Findsmc_compiler.rst  Findsqlite.rst  (+6 more)
doc/presentations_and_status/: CetmodulesHighlights-2021-02-10.md  CetmodulesHighlights-2021-02-23.md  CetmodulesHighlights-2021-03-24.md  GNUmakefile
doc/reference/: conf.py.in  index.rst  opts-inc.rst.m4
doc/reference-templates/: layout.html
doc/release_notes/: index.rst
doc/static/: cetmodules.css  cmake.css  version_switch.js
doc/templates/: layout.html
doc/variable/: BUILD_STATIC_LIBS.rst  WANT_UPS.rst
etc/: CMakeLists.txt  CompileOnlyTest.cmake.in  CompileOnlyTest.in  cmake_required_version.txt
libexec/: .perlcriticrc  CMakeLists.txt  CPAN2Spack  Cetmodules.pm  bootstrap-perl-env  cet_exec_test  cet_lock  checkClassVersion  cmake-graphviz-filt  filter-output  filter-program-options  fix-man-dirs  message_functions.sh  parse_deps.pm  remove_deleted_header_refs  set_dev_products  verify_build_environment
libexec/Cetmodules/: CMake.pm  Util.pm  migrate_old.pl
ups-templates/: CMakeLists.txt  README  product_deps.template.in  setup.in
(+1529 files in other folders)
